Chanbges for Perl extension Task-Weaken

        - Require List::Util::XS in some cases (unreleased commit from 2012,
          Alexandr Ciornii)

1.04      2011-03-08
	- Updating author tests (ADAMK)
	- Updating to Module::Install (ADAMK)
        - Simple refactoring of Makefile.PL (CHORNY)

1.03      2009-06-12
	- Updating to flush out some old CPAN Testers results

1.02      2007-11-14
	- Updating to newer AUTOMATED_TESTING tests
	- Updating to fixed META.yml

1.01      2007-10-22
	- Updating to newer AUTOMATED_TESTING tests

1.00      2007-08-18
	- Adding more detail to the Makefile.PL, better error messages,
	  and several additional fallback options.

0.99      2006-05-25
	- Initial release