@@ -1,0 +1,29 @@
+name                = Task-Weaken
+author              = Adam Kennedy <adamk@cpan.org>
+copyright_holder    = Adam Kennedy
+copyright_year      = 2006
+license             = Perl_5
+abstract            = Ensure that a platform has weaken support
+
+[@Author::ETHER]
+:version = 0.119
+installer = none    ; MakeMaker::Awesome used lower down
+Authority.authority = cpan:ADAMK
+-remove = PodWeaver
+-remove = Test::NoTabs      ; TODO
+-remove = Test::PodSpelling ; TODO
+
+[PodVersion]
+
+[MakeMaker::Awesome]
+:version = 0.35
+header_file = Makefile.header
+footer_file = Makefile.footer
+
+[DynamicPrereqs]
+:version = 0.034
+-body = check_scalar_util();
+; subs are used in the footer, which DynamicPrereqs doesn't scan (but it
+; eventually will, when MakeMaker::Awesome supports dynamic prereqs natively)
+-include_sub = requires
+-include_sub = can_cc
