@@ -3,10 +3,7 @@ package Task::Weaken;
 use 5.005;
 use strict;
 
-use vars qw{$VERSION};
-BEGIN {
-	$VERSION = '1.05';
-}
+our $VERSION = '1.05';
 
 1;
 
